Regression: Knife Tool always cuts through #98445

Closed
opened 2022-05-27 15:57:46 +02:00 by Julien Kaspar · 14 comments
Member

System Information
Operating system: Linux-5.15.0-33-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.05

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-27 12:23, hash: 9fef80c663
Worked: 3.3.0 Alpha, branch: master, commit date: 2022-05-25 07:20, hash: 80e007fe8c

Caused by adaf92b4ab

Short description of error
When using the Knife operator or active tool, it always cuts through the entire object.

Exact steps for others to reproduce the error

  • Go into edit mode
  • Press K
  • Cut the geometry
**System Information** Operating system: Linux-5.15.0-33-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.05 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-27 12:23, hash: `9fef80c663` Worked: 3.3.0 Alpha, branch: master, commit date: 2022-05-25 07:20, hash: `80e007fe8c` Caused by adaf92b4ab **Short description of error** When using the Knife operator or active tool, it always cuts through the entire object. **Exact steps for others to reproduce the error** - Go into edit mode - Press `K` - Cut the geometry
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

#98509 was marked as duplicate of this issue

#98509 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Caused by adaf92b4ab

CC @ideasman42

Caused by adaf92b4ab CC @ideasman42
Philipp Oeser changed title from Knife Tool always cuts through to Regression: Knife Tool always cuts through 2022-05-27 16:38:33 +02:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade self-assigned this 2022-05-27 19:56:36 +02:00
Member

Can check

Can check

Added subscriber: @Taiseibutsu

Added subscriber: @Taiseibutsu

This comment was removed by @Taiseibutsu

*This comment was removed by @Taiseibutsu*

This issue was referenced by a8471459fd

This issue was referenced by a8471459fd18f356f730c684665c8dadadad723d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @borschberry

Added subscriber: @borschberry
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98445
No description provided.