Fix T98445: Knife Tool always cuts through

Minor error in if condition used for early return.

Ref D15050